--- a/src/app/pages/blog/blog-list/blog-list.component.css
+++ b/src/app/pages/blog/blog-list/blog-list.component.css
@@ -118,8 +118,9 @@
 
 .blog-card__footer {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
+  flex-direction: column;
   gap: 1rem;
 }
 
