--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -457,7 +457,7 @@
     </section>
 
     <!-- SECURITY -->
-    <section id="security" class="content-section">
+    <!-- <section id="security" class="content-section">
       <h2 class="text-2xl md:text-3xl font-bold mb-4"
           i18n="@@home.section.security.title.label">
         Your Privacy and Security Come First
@@ -469,7 +469,7 @@
         Every inbox is <strong>private, anonymous, and auto-deleted</strong> after its lifetime ends.
         This ensures complete safety and peace of mind whenever you use Temp Mail.
       </p>
-    </section>
+    </section> -->
 
     <!-- VARIANTS -->
     <section id="variants" class="content-section">
@@ -691,7 +691,7 @@
     <ng-container *ngIf="isEnglish">
       <section id="blog" class="content-section mt-12">
         <h2 class="text-2xl md:text-3xl font-bold mb-4">
-          Latest from the TempMail4U Blog
+          Latest from the our Blog
         </h2>
         <p class="text-sm md:text-base text-gray-700 mb-6">
           Fresh guides on email privacy, spam protection, and getting the most from disposable inboxes.
